Fix layout issue

--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
     margin: 0;
 }
 
-html, body #fullheight {
-    min-height:  100% !important;
+html, body {
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(51, 51, 51);
